# QSanguosha-v2

./: .gitignore  CMakeLists.txt  QSanguosha.pro  sanguosha.ts
.github/workflows/: linux.yml
lua/: config.lua
lua/ai/: standard-ai.lua
src/: main.cpp  pch.h
src/client/: aux-skills.cpp  client.cpp  client.h
src/core/: audio.cpp  audio.h  audio_qt5.cpp  card.h  engine.cpp  general.cpp  json.h  player.cpp  protocol.h  record-analysis.cpp  settings.cpp  skill.cpp  util.h
src/dialog/: cardeditor.cpp  choosegeneraldialog.cpp  customassigndialog.cpp  dialogslsettings.cpp  generaloverview.cpp  mainwindow.cpp  mainwindow.h  mainwindowserverlist.cpp  mainwindowserverlist.h  playercarddialog.cpp  roleassigndialog.cpp  scenario-overview.cpp
src/lua/: CMakeLists.txt
src/package/: assassins.cpp  boss.cpp  fire.cpp  god.cpp  jiange-defense.cpp  joy.cpp  jsp.cpp  mountain.cpp  nostalgia.cpp  ol.cpp  sp.cpp  special1v1.cpp  standard-cards.cpp  standard-generals.cpp  standard-skillcards.cpp  thicket.cpp  wind.cpp  wisdom.cpp  yitian.cpp  yjcm.cpp  yjcm2012.cpp  yjcm2013.cpp  yjcm2014.cpp  yjcm2015.cpp
src/scenario/: boss-mode-scenario.cpp  miniscenarios.cpp  scenerule.cpp
src/server/: ai.cpp  gamerule.cpp  generalselector.cpp  qtupnpportmapping.cpp  room.cpp  roomthread.cpp  roomthread1v1.cpp  roomthread3v3.cpp  roomthreadxmode.cpp  server.cpp  server.h  serverplayer.cpp
src/ui/: bubblechatbox.cpp  carditem.cpp  dashboard.cpp  generic-cardcontainer-ui.cpp  magatamas-item.cpp  magatamas-item.h  qsanbutton.cpp  roomscene.cpp  skin-bank.cpp  timed-progressbar.cpp  timed-progressbar.h
src/util/: nativesocket.cpp  recorder.cpp
swig/: ai.i  list.i  native.i  sanguosha.i
